assets/css/style.css
/* google fonts import file */
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');


/* universal styles */
* {
    margin: 0; 
    padding: 0;
    box-sizing: border-box;
    font-family: "EB Garamond", serif;
    color:black;
    font-size: 19px;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    background-color: #FFFFFF;
}

.wrapper {
    width: 770px;
    padding: 35px;
    background-color: #f5f3c4;
}

/* timer styles */
.timer-box {
    display: flex;
}

.timer-box ul {
    list-style: none;
}

.timer-details li {
    display: inline-block;
    margin: 0.5em 0.3em 0.5em 0;
}

.wrapper .content-box {
    padding: 15px 25px;
    border: 1px solid #ccc;
}

.content-box .typing-text {
    max-height: 240px;
    overflow-y: auto;
}

.content-box .content {
    display: flex;
    justify-content: space-between;
}

.content ul {
    display: flex;
    width: 100%;
    justify-content: center;
    margin: 0.5em 0;
}

/* test reset button styles */
.btn {
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    padding: 15px 30px;
}

/* excerpt paragraph scrollbar style*/
.typing-text::-webkit-scrollbar {
    width: 0;
}

.result-details li {
    list-style: none;
    padding: 10px 20px;
    text-align: center;
}

.typing-text span {
    display: inline;
}

.typing-text p {
    text-align: justify;
    font-size: 19px;
    letter-spacing: 1px;
}

#typing-input {
    display: flex;
    width: 100%;
    padding: 5px 5px;
    font-size: 19px;
}

/* styles for correct and incorrect typing */
.typing-text span.correct {
    color: green;
}

.typing-text span.incorrect {
    color: red;
}

.typing-text p {
    margin-bottom: 10px;
    border-bottom: 1px solid #ccc;
    padding-bottom: 10px;
}

/* styles to preserve white spaces */
.typing-text span {
    display: inline-block; 
    /* preserve white space */
    white-space: pre; 
}

.typing-text span.space {
    display: inline-block;
    /* ensure space is visible */
    width: 0.5em; 
}

/* cursor blinking styles */
.typing-text span.active {
    border-right: 2px solid black; 
    animation: blink-cursor 0.7s steps(1) infinite; 
    margin-right: -2px; 
}

@keyframes blink-cursor {
    0%, 50% {
        /* cursor visible */
        border-color: black; 
    }
    51%, 100% {
        /* cursor hidden */
        border-color: transparent;
    }
}

.typing-text span {
    display: inline-block; 
}

/* MEDIA QUERY - SMALLER MOBILE SCREENS (max width: 412px) */
@media (max-width: 412px) {
    .wrapper {
        width: 100%;
        padding: 20px;
    }
    .content-box {
        padding: 10px 15px;
    }
    .button {
        padding: 10px 15px;
    }
    body {
        font-size: 16px;
    }
    .content ul {
        flex-direction: column;
        align-items: center;
    }
    .result-details li {
        width: 100%;
        margin-bottom: 10px;
    }
}

/* MEDIA QUERY - MEDIUM MOBILE SCREENS (max width: 574px) */
@media (max-width: 574px) {
    .wrapper {
        width: 100%;
        padding: 25px;
    }
    .content-box {
        padding: 20px 20px;
    }
    button {
        padding: 12px 25px;
    }
    body {
        font-size: 17px;
    }
    .content ul {
        flex-direction: column;
        align-items: center;
    }
    .result-details li {
        width: 100%;
        margin-bottom: 10px;
    }
}

/* MEDIA QUERY - MOBILE SCREENS (max width 767px) */
@media (max-width: 767px) {
    .wrapper {
        width: 95%;
        padding: 30px;
    }
    .content-box {
        padding: 25px;
    }
    .content {
        flex-direction: column;
        align-items: center;
    }
    #typing-input {
        font-size: 18px;
    }
    .content ul {
        flex-direction: column;
        align-items: center;
    }
    .result-details li {
        width: 100%;
        margin-bottom: 10px;
    }
}

/* MEDIA QUERY - TABLET SCREENS (768px and larger) */
@media (min-width: 768px) and (max-width: 991px) {
    .wrapper {
        width: 700px;
    }
    .content-box {
        padding: 30px;
    }
    .content ul {
        flex-direction: column;
        align-items: center;
    }
}

/* MEDIA QUERY - LAPTOPS & DESKTOPS (992px and larger) */
@media (min-width: 992px) and (max-width: 1023px) {
    .wrapper {
        width: 80%;
    }
    body {
        font-size: 18px;
    }
}

/* MEDIA QUERY - DESKTOP SCREENS (1024px and larger) */
@media (min-width: 1024px) and (max-width: 1799px) {
    .wrapper {
        max-width: 900px;
    }
    body {
        font-size: 19px;
    }
}

/* MEDIA QUERY - WIDER SCREEN DESKTOPS (1800px and larger) */
@media (min-width: 1800px) {
    .wrapper {
        max-width: 1200px;
    }
    body {
        font-size: 20px;
    }
}

